# customcli

./: .dockerignore  .gitignore  Dockerfile  GEMINI.md  MAINTENANCE.md  README.md  USAGE_GUIDE.md  agent_config.yaml  agents.md  masking_config.yaml  pyproject.toml  테스트.md
src/secure_cli/: core.py
src/secure_cli/agent/: group.py  orchestrator.py
src/secure_cli/agent/backends/: agent_backend.py  chat_backend.py  factory.py
src/secure_cli/commands/: handlers.py  plugins.py  registry.py
src/secure_cli/commands/handlers/: __init__.py  ai.py  base.py  session.py  system.py  tools.py
src/secure_cli/security/: protector.py  sandbox.py
src/secure_cli/state/: session.py  telemetry.py
src/secure_cli/ui/: completer.py  controller.py  keybindings.py  viewer.py
src/secure_cli/utils/: compressor.py  git.py  logger.py  mcp.py  rag.py  scheduler.py  skills.py  terminal_adapter.py
