[project]
name = "custom-cli"
version = "1.7.0"
description = "Humble Custom AI Workstation with Antigravity and GenAI support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-antigravity",
    "google-genai",
    "rich",
    "prompt-toolkit",
    "pyperclip",
    "PyYAML",
    "python-dotenv",
    "httpx",
]

[project.scripts]
custom-cli = "secure_cli.core:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
